--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>The Art of Communication</h1>
-                            <span class="subheading">A Blog by Glenn S. Alon</span>
+                            <span class="subheading">A Blog by Glenn S. Alon</span> 
+                            
                         </div>
                     </div>
                 </div>
@@ -142,7 +143,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; 2023 Glenn Alon from BSCS 1-2AA</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; 2023 Glenn Alon from BSCS 1-2AA<br>For educational purposes only.</div>
                     </div>
                 </div>
             </div>
